<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:background="@color/newsfeed_background"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/reg_img_height"
        android:src="@drawable/user"
        android:layout_gravity="center"
        android:id="@+id/regImage" />

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="18dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/hint_name"
            android:id="@+id/name"
            android:inputType="textPersonName"
            android:drawableRight="@drawable/ic_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/hint_email"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:drawableRight="@drawable/ic_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/hint_password"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:text="@string/btn_register"
        android:background="@color/button"
        android:textColor="@android:color/white"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorAccent"
        android:text="@string/btn_link_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:id="@+id/progress"
        android:visibility="invisible"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

</LinearLayout>